--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="img-container">
+            <img src="image/iphone.jpg" alt="iphone-img" class="image">
+        </div>
+    </div>
 </body>
 <script src="count.js"></script>
 </html>
