--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,41 @@
     <title>Countdown Clock</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="img-container">
             <img src="image/iphone.jpg" alt="iphone-img" class="image">
         </div>
+        <div class="content">
+            <h3>old iphone giveaway</h3>
+            <h4>giveaway ends on fri, 23 april 2021 11:20am</h4>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint deleniti molestiae dolorem modi dolore
+                mollitia accusamus fugit qui minus minima quod expedita, consequatur odio, suscipit assumenda. Cumque
+                enim veniam aperiam!
+            </p>
+            <div class="counter-clock">
+                <div class="counter-items">
+                    <h4 class="days">34</h4>
+                    <span>days</span>
+                </div>
+                <div class="counter-items">
+                    <h4 class="hours">4</h4>
+                    <span>hours</span>
+                </div>
+                <div class="counter-items">
+                    <h4 class="mins">46</h4>
+                    <span>mins</span>
+                </div>
+                <div class="counter-items">
+                    <h4 class="secs">58</h4>
+                    <span>secs</span>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="count.js"></script>
+
 </html>
