--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="image/iphone.jpg" alt="iphone-img" class="image">
         <div class="content">
             <h3>old iphone giveaway</h3>
-            <h5>giveaway ends on fri, 23 april 2021 11:20am</h5>
+            <h5 class="give-away">giveaway ends on fri, 23 april 2021 11:20am</h5>
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint deleniti molestiae dolorem modi dolore
                 mollitia accusamus fugit qui minus minima quod expedita, consequatur odio, suscipit assumenda. Cumque
