--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             </p>
             <div class="counter-clock">
                 <div class="counter-items">
-                    <h4 class="days">34</h4>
+                    <h4 class="days item">34</h4>
                     <span>days</span>
                 </div>
                 <div class="counter-items">
-                    <h4 class="hours">4</h4>
+                    <h4 class="hours item">4</h4>
                     <span>hours</span>
                 </div>
                 <div class="counter-items">
-                    <h4 class="mins">46</h4>
+                    <h4 class="mins item">46</h4>
                     <span>mins</span>
                 </div>
                 <div class="counter-items">
-                    <h4 class="secs">58</h4>
+                    <h4 class="secs item">58</h4>
                     <span>secs</span>
                 </div>
             </div>
